--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,13 @@
     "gsap": "^3.2.6",
     "howler": "^2.1.3",
     "moment": "^2.24.0",
+    "npm": "^6.14.5",
+    "socket.io-client": "^2.3.0",
+    "uuid-random": "^1.3.0",
     "vddl": "^0.7.1",
     "vue": "^2.6.11",
     "vue-cryptojs": "^2.1.4",
+    "vue-socket.io-extended": "^4.0.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
