--- a/.github/workflows/server_heroku.yml
+++ b/.github/workflows/server_heroku.yml
@@ -22,15 +22,15 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Install and Build
+    - name: Install Dependencies
       working-directory: ./server
       run: |
         npm install
 
     - name: Deploy
-    - uses: akhileshns/heroku-deploy@v3.4.6 # This is the action
+    - uses: akhileshns/heroku-deploy@v3.4.6
       with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "advanced-pet-server" #Must be unique in Heroku
-          heroku_email: "wellington.pires@live.com"
-          appdir: "server"
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: "advanced-pet-server" #Must be unique in Heroku
+        heroku_email: "wellington.pires@live.com"
+        appdir: "server"
