--- a/.github/workflows/server_heroku.yml
+++ b/.github/workflows/server_heroku.yml
@@ -21,14 +21,13 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
     - name: Install Dependencies
       working-directory: ./server
       run: |
         npm install
 
-    - name: Deploy
-    - uses: akhileshns/heroku-deploy@v3.4.6
+    - name: Deploy to Heroku
+      uses: AkhileshNS/heroku-deploy@v3.4.6
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "advanced-pet-server" #Must be unique in Heroku
