Change server settings

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "debug": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
