--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.4",
+    "font-awesome": "^4.7.0",
     "gsap": "^3.5.0",
     "howler": "^2.2.0",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
+    "shake.js": "^1.2.2",
     "socket.io-client": "^2.3.0",
     "uuid-random": "^1.3.2",
     "vddl": "^0.7.1",
