--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "gsap": "^3.5.0",
     "howler": "^2.2.0",
+    "html-loader": "^1.3.0",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
     "shake.js": "^1.2.2",
