--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "html-loader": "^1.3.0",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
+    "secure-ls": "^1.2.6",
     "shake.js": "^1.2.2",
     "socket.io-client": "^2.3.0",
     "uuid-random": "^1.3.2",
