--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "uuid-random": "^1.3.2",
     "vddl": "^0.7.1",
     "vue": "^2.6.12",
+    "vue-carousel": "^0.18.0",
     "vue-cryptojs": "^2.1.5",
     "vue-socket.io-extended": "^4.0.4",
     "vuex": "^3.5.1"
