--- a/.github/workflows/server_heroku.yml
+++ b/.github/workflows/server_heroku.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build and Deploy
+name: Build and Deploy To Heroku
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -29,5 +29,5 @@ jobs:
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "advanced-pet-server" #Must be unique in Heroku
-        heroku_email: "wellington.pires@live.com"
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
         appdir: "server"
