--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "shake.js": "^1.2.2",
     "socket.io-client": "^2.4.0",
     "uuid-random": "^1.3.2",
-    "vddl": "^0.7.1",
+    "vddl": "https://github.com/xwellingtonx/vddl/releases/download/fixes/vddl-0.7.1.tgz",
     "vue": "^2.6.12",
     "vue-carousel": "^0.18.0",
     "vue-cryptojs": "^2.1.5",
