--- a/client/package.json
+++ b/client/package.json
@@ -10,34 +10,34 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.13.0",
+    "core-js": "^3.17.2",
     "font-awesome": "^4.7.0",
-    "gsap": "^3.6.1",
-    "howler": "^2.2.1",
+    "gsap": "^3.7.1",
+    "howler": "^2.2.3",
     "html-loader": "^1.3.2",
     "moment": "^2.29.1",
-    "npm": "^6.14.13",
+    "npm": "^6.14.15",
     "secure-ls": "^1.2.6",
     "shake.js": "^1.2.2",
     "socket.io-client": "^2.4.0",
     "uuid-random": "^1.3.2",
-    "vddl": "https://github.com/xwellingtonx/vddl/releases/download/fixes/vddl-0.7.1.tgz",
-    "vue": "^2.6.12",
+    "vddl": "^0.7.1",
+    "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
-    "vue-cryptojs": "^2.1.5",
+    "vue-cryptojs": "^2.1.6",
     "vue-socket.io-extended": "^4.2.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.34.0",
+    "sass": "^1.39.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   }
 }
