--- a/.github/workflows/server_heroku.yml
+++ b/.github/workflows/server_heroku.yml
@@ -25,7 +25,8 @@ jobs:
         npm install
 
     - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.4.6
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "advanced-pet-server" #Must be unique in Heroku
