--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.7.1",
     "howler": "^2.2.3",
     "html-loader": "^1.3.2",
+    "mobile-drag-drop": "^2.3.0-rc.2",
     "moment": "^2.29.1",
     "npm": "^6.14.15",
     "secure-ls": "^1.2.6",
