--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,10 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.17.2",
+    "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
     "gsap": "^3.7.1",
     "howler": "^2.2.3",
-    "html-loader": "^1.3.2",
     "mobile-drag-drop": "^2.3.0-rc.2",
     "moment": "^2.29.1",
     "npm": "^6.14.15",
@@ -26,19 +25,22 @@
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
     "vue-cryptojs": "^2.1.6",
+    "vue-inline-svg": "^2.1.3",
     "vue-socket.io-extended": "^4.2.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-vuex": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.39.0",
-    "sass-loader": "^8.0.2",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "html-loader": "^4.2.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
